# shape-shifter-curse-fabric

./: .gitignore  README.md  TODO.md  build.gradle  gradle.properties
.github/workflows/: AutoSyncBranch.yml  Build_Dev_Version.yml  ManualBuild.yml
.ssc-studio/blueprints/: air_from_potions.json  form_anubis_wolf_1_summon_wolf_when_hit.json  form_anubis_wolf_1_wither_attack.json  form_anubis_wolf_2_summon_wolf_when_hit.json  form_anubis_wolf_2_wither_attack.json  form_anubis_wolf_2_wither_health.json  form_anubis_wolf_can_eat_bone.json  form_anubis_wolf_sound_key.json  form_axolotl_2_water_spurt.json  form_axolotl_fountain_belt_trinket.json  form_familiar_fox_0_scale.json  form_familiar_fox_2_tan_temperature_modify.json  form_familiar_fox_3_tan_temperature_modify.json  form_instinct_use_golden_apple.json  form_ocelot_2_raw_meat_only.json  form_ocelot_3_jump_high.json  form_snow_fox_1_charm_of_reverse_thermometer_trinket.json  form_snow_fox_2_charm_of_reverse_thermometer_trinket.json  form_snow_fox_2_snowball_up.json  form_snow_fox_2_tan_temperature_remap.json  form_snow_fox_2_triple_jump.json  form_snow_fox_3_charm_of_reverse_thermometer_trinket.json  form_snow_fox_3_tan_temperature_remap.json  (+7 more)
PatronServer/: Server.py
dev/: forge_port_plan.txt  remove_origins_plan.txt  rewrite_form_change_plan.md  rewrite_form_change_plan.txt
tools/: AddFormSkill.md  GenerateRideAnim.py  LangMissingCheck.py  MaskProcess.py  ProjectStructure.md  RichLang2Lang.py  rgb_colormask_maker.py
tools/MaskProcessV2_C/Source/MPV2C/: CMakeLists.txt  dataStruct.h  maskProcessV2.cpp
(+1353 files in other folders)
